WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48087
Always clear the selection when the find string isn't found
https://bugs.webkit.org/show_bug.cgi?id=48087
Summary
Always clear the selection when the find string isn't found
Anders Carlsson
Reported
2010-10-21 12:40:54 PDT
Always clear the selection when the find string isn't found
Attachments
Patch
(1.56 KB, patch)
2010-10-21 12:46 PDT
,
Anders Carlsson
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-10-21 12:44:13 PDT
<
rdar://problem/8564640
>
Anders Carlsson
Comment 2
2010-10-21 12:46:03 PDT
Created
attachment 71473
[details]
Patch
Dave Hyatt
Comment 3
2010-10-21 12:46:32 PDT
Comment on
attachment 71473
[details]
Patch r=me
Anders Carlsson
Comment 4
2010-10-21 12:53:33 PDT
Committed
r70258
: <
http://trac.webkit.org/changeset/70258
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug