Always clear the selection when the find string isn't found https://bugs.webkit.org/show_bug.cgi?id=48087 <rdar://problem/8564640>

Reviewed by David Hyatt.

* WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::findString):

Canonical link: https://commits.webkit.org/60809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70258 268f45cc-cd09-0410-ab3c-d52691b4dbfc